[package]
name = "nyabot"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
#opt-level = "z"  # Optimize for size.
lto = "thin"
codegen-units = 1

[dependencies]
async-trait = "0.1.68"
rand = "0.8.5"
serenity = "0.11.5"
tokio = { version = "1.28.2" , features = ["rt-multi-thread"] }
